--- a/app/src/main/res/layout/activity_fragment1.xml
+++ b/app/src/main/res/layout/activity_fragment1.xml
@@ -3,19 +3,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Fragments.Fragment1" >
+    tools:context=".Fragments.Fragment1">
 
     <com.example.sakurasky.yedance.Views.ImageCycleView
         android:id="@+id/icv_topView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_weight="0.8" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1.5"
+        android:layout_weight="0.18"
         android:background="@color/white"
         android:orientation="vertical">
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="40dp"
@@ -23,11 +25,17 @@
             android:paddingLeft="20dp"
             android:text="首页"
             android:textColor="@color/black"
-            android:textSize="18sp"/>
+            android:textSize="18sp" />
+
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/huise"/>
+            android:background="@color/huise" />
     </LinearLayout>
 
+    <ListView
+        android:id="@+id/newslist"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1.5" />
 </LinearLayout>
