--- a/app/src/main/res/layout/activity_fragment4.xml
+++ b/app/src/main/res/layout/activity_fragment4.xml
@@ -41,7 +41,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:background="@color/white"
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
         android:orientation="horizontal">
@@ -56,6 +55,7 @@
                 android:layout_height="wrap_content"
                 android:text="关注"
                 android:textColor="@color/qred"
+
                 android:textSize="@dimen/Tit_size"/>
             <TextView
                 android:layout_width="wrap_content"
@@ -114,7 +114,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:background="@color/white"
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
 
@@ -217,6 +216,7 @@
         android:stretchMode="columnWidth"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:listSelector="@android:color/transparent"
         android:verticalSpacing="1dp"
         android:horizontalSpacing="1dp"
         android:numColumns="4"
