--- a/app/src/main/res/layout/activity_information_content.xml
+++ b/app/src/main/res/layout/activity_information_content.xml
@@ -1,12 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context=".Activitys.ContentActivity">
 
-</RelativeLayout>
+    <include layout="@layout/headbar" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="80px"
+        android:text="idiasudsaiudiasudi"
+        android:gravity="center"
+        android:textSize="32px"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:textSize="18px"
+            android:text="发布时间:2014-02-45 09:04"
+            />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:textSize="18px"
+            android:text="作者:121548878"
+            />
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:textSize="18px"
+            android:text="分类:本子"
+            />
+    </LinearLayout>
+</LinearLayout>
