--- a/app/src/main/res/layout/grid_item4.xml
+++ b/app/src/main/res/layout/grid_item4.xml
@@ -3,9 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    android:background="@drawable/bg_gv"
     android:orientation="vertical">
-
+<!--    android:background="@drawable/bg_gv"-->
         <ImageView
             android:id="@+id/img"
             android:layout_width="35dp"
